<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/_3sdp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/temperature"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    tools:text="20" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/date"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="29-2-2020 6:00"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />
            </TableRow>


        </TableLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMoreDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/_5sdp"
            android:text="@string/more_details"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

    </LinearLayout>

</androidx.cardview.widget.CardView>